@startuml

class CreatePostItUI <<presentation>>
class CreatePostItController <<application>>
class PostIt <<domain-valueobject>>
class SharedBoardCell <<domain>>
class SharedBoardCellRepository <<repository>>
class SharedBoardCellService <<service>>

CreatePostItUI --> CreatePostItController : theController

CreatePostItController ..> SharedBoardCellService : use

SharedBoardCellService ..> SharedBoardCellRepository : use

SharedBoardCellService -> PostIt : create
SharedBoardCellRepository -> SharedBoardCell : save

'function:
CreatePostItController : getsCellsAvailable(shareBoard)
SharedBoardCell : addPostIt(postit)
CreatePostItController : registerPostIt(title,description,shareBoard,row,column)
SharedBoardCellService : getCellAvailableByShareBoard(shareBoard)
SharedBoardCellService : getBoardColumns(shareBoard)
SharedBoardCellRepository : findPostItByShareBoard(shareBoard)
SharedBoardCellService : registerPostIt(title,description,shareBoard,row,column)
SharedBoardCellRepository : save(postit)


@enduml